tdf#103800 PPTX shape import: fix regression of text color

defined by list styles. Properties in a:lstStyle of p:txBody
should take precedence over the same properties defined in
a:fontRef of style elements.

Change-Id: I02cc886eb9eba94f49fe413a63bf7c46c9e3c127
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130237
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130712
Tested-by: Jenkins